Update users template

--- a/kawn_subscriptions_manager/templates/account/password_reset.html
+++ b/kawn_subscriptions_manager/templates/account/password_reset.html
@@ -42,6 +42,15 @@
                                 <div class="card-header pb-0 text-left bg-transparent">
                                     <img src="{% static 'images/kawn_logo.svg' %}" alt="" width="30%"><br>
                                     <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3><br>
+                                    {% for message in messages %}
+                                    <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+                                        <strong class="text-white">{{ message }}</strong>
+                                        <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                            aria-label="Close"><span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    {% endfor %}
+
                                     <strong class="mb-0">Enter your email address, and we'll send you an email to reset your password.
                                     </strong>
                                 </div>
