--- a/kawn_subscriptions_manager/templates/layouts/sidebar.html
+++ b/kawn_subscriptions_manager/templates/layouts/sidebar.html
@@ -8,7 +8,7 @@
             aria-hidden="true" id="iconSidenav"></i>
         <a class="navbar-brand m-0" href="/" target="_blank">
             <img src="{% static 'images/kawn_logo.svg' %}" alt=""><br>
-            <span class="font-weight-bold">Subscriptions Manager</span>
+            <span class="font-weight-bold text-lg text-info text-gradient">Subscriptions Manager</span>
         </a>
     </div>
     <hr class="horizontal dark mt-0">
