--- a/kawn_subscriptions_manager/templates/users/admin/edit_users.html
+++ b/kawn_subscriptions_manager/templates/users/admin/edit_users.html
@@ -13,6 +13,13 @@
                 <div class="row">
                     <div class="col-lg-10">
                         <div class="d-flex flex-column h-100">
+                            {% for message in messages %}
+                            <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+                                <strong class="text-white">{{ message }}</strong>
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span
+                                    aria-hidden="true">&times;</span></button>
+                            </div>
+                            {% endfor %}
                             <h5 class="font-weight-bolder">Edit User</h5>
                             <form method="post" novalidate>
                                 {% csrf_token %}
