--- a/kawn_subscriptions_manager/templates/account/login.html
+++ b/kawn_subscriptions_manager/templates/account/login.html
@@ -41,7 +41,7 @@
                                     <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3>
                                     <p class="mb-0">Enter your credentials to login</p>
                                     {% for message in messages %}
-                                    <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+                                    <br><div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
                                         <strong class="text-white">{{ message }}</strong>
                                         <button type="button" class="btn-close" data-bs-dismiss="alert"
                                             aria-label="Close"><span aria-hidden="true">&times;</span>
