--- a/kawn_subscriptions_manager/templates/account/password_set.html
+++ b/kawn_subscriptions_manager/templates/account/password_set.html
@@ -7,6 +7,15 @@
 
 {% block inner %}
     <h1>{% translate "Set Password" %}</h1>
+    
+    {% for message in messages %}
+    <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+        <strong class="text-white">{{ message }}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert"
+            aria-label="Close"><span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
