--- a/kawn_subscriptions_manager/templates/account/verified_email_required.html
+++ b/kawn_subscriptions_manager/templates/account/verified_email_required.html
@@ -7,6 +7,15 @@
 {% block inner %}
 <h1>{% translate "Verify Your E-mail Address" %}</h1>
 
+{% for message in messages %}
+<div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+    <strong class="text-white">{{ message }}</strong>
+    <button type="button" class="btn-close" data-bs-dismiss="alert"
+        aria-label="Close"><span aria-hidden="true">&times;</span>
+    </button>
+</div>
+{% endfor %}
+
 {% url 'account_email' as email_url %}
 
 <p>{% blocktranslate %}This part of the site requires us to verify that
