--- a/kawn_subscriptions_manager/templates/users/profile.html
+++ b/kawn_subscriptions_manager/templates/users/profile.html
@@ -6,6 +6,14 @@
     <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
         <div class="card">
             <div class="card-body p-3 mb-xl-12">
+                {% for message in messages %}
+                <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+                    <strong class="text-white">{{ message }}</strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert"
+                        aria-label="Close"><span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                {% endfor %}
                 <h3>Users</h3><br>
                 <table class="table mb-0">
                     <thead>
