--- a/kawn_subscriptions_manager/templates/users/user_form.html
+++ b/kawn_subscriptions_manager/templates/users/user_form.html
@@ -8,6 +8,14 @@
   <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
     <div class="card">
       <div class="card-body">
+        {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+            <strong class="text-white">{{ message }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert"
+                aria-label="Close"><span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
         <h1>Hi, {{ user.username }}</h1>
         <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
           {% csrf_token %}
