--- a/kawn_subscriptions_manager/templates/clients/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/list_client.html
@@ -29,9 +29,6 @@
                             <tr class="text-center">
                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Client
                                     Name</th>
-                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
-                                    Outlet Name
-                                </th>
                                 <th
                                     class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
                                     Sales Name
@@ -52,9 +49,6 @@
                                     <p class="text-xs font-weight-bold mb-0">{{ data.name }}</p>
                                 </td>
                                 <td class="align-middle text-center text-sm">
-                                    <p class="text-xs font-weight-bold mb-0">{{ data.business_name }}</p>
-                                </td>
-                                <td class="align-middle text-center text-sm">
                                     <p class="text-xs font-weight-bold mb-0">{{ data.user.name }}</p>
                                 </td>
                                 <td class="align-middle text-center text-sm">
@@ -66,6 +60,8 @@
                                 </td>
                                 <td class="align-middle text-center text-sm">
                                     <div class="d-inline">
+                                        <a href="{% url 'clients:list_outlet_client' data.id %}"
+                                            class="badge bg-primary">Outlet</a>
                                         <a href="{% url 'clients:update_client' data.id %}"
                                             class="badge bg-warning">Edit</a>
                                         {% if data.is_active %}
