--- a/kawn_subscriptions_manager/templates/clients/sales/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_client.html
@@ -17,6 +17,8 @@
                     {% endfor %}
                     <div class="align-middle">
                         <h5 class="font-weight-bolder">Clients</h5>
+                        <a href="{% url 'clients:add_client' %}" class="btn bg-gradient-info col-md-2 mt-2">Add
+                            Client</a>
                     </div>
                 </div>
             </div>
