--- a/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
@@ -17,6 +17,8 @@
           {% endfor %}
           <div class="align-middle">
             <h5 class="font-weight-bolder">Outlets</h5>
+            <a href="{% url 'clients:add_outlet_client' id %}" class="btn bg-gradient-info col-md-2 mt-2">Add
+              New Outlet</a>
           </div>
         </div>
       </div>
