--- a/kawn_subscriptions_manager/templates/base.html
+++ b/kawn_subscriptions_manager/templates/base.html
@@ -64,17 +64,17 @@
 </head>
 
 <body class="g-sidenav-show  bg-gray-100">
-  {% include "layouts/sidebar.html" %}
+  {% include "partials/sidebar.html" %}
 
   <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
     <!-- Navbar -->
-    {% include "layouts/navbar.html" %}
+    {% include "partials/navbar.html" %}
     <div class="container-fluid py-4">
       {% block content %}
       {% endblock content %}
 
       <!-- Footer -->
-      {% include "layouts/footer.html" %}
+      {% include "partials/footer.html" %}
 
     </div> <!-- /container -->
   </main>
@@ -105,7 +105,7 @@
     }
   </script>
 
-  <script>
+  <!-- <script>
     // Toggle Sidenav
     const iconNavbarSidenav = document.getElementById('iconNavbarSidenav');
     const iconSidenav = document.getElementById('iconSidenav');
@@ -136,7 +136,7 @@
         iconSidenav.classList.remove('d-none');
       }
     }
-  </script>
+  </script> -->
 
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="{% static 'js/soft-ui-dashboard.min.js' %}"></script>
